# sup_python

./: .gitignore  main.py  pyproject.toml  update.py
configs/: AllegroConfig.py  AmazonConfig.py
modules/: APITokenManager.py  AlegroApiManager.py  DatabaseManager.py  DownloadGrowboxXML.py  DownloadXML.py  FileManager.py  ParsingManager.py
modules/DataFiltering/: GetAllData.py  GetAllegroData.py  GetAmazonData.py
